# redisearch-py

./: .dockerignore  .gitignore  API.md  Dockerfile  LICENSE  README.md  gendoc.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: circle_requirements.txt  config.yml
.github/: release-drafter-config.yml
.github/workflows/: check-pypi.yml  codeql-analysis.yml  publish-pypi.yml
redisearch/: __init__.py  _util.py  aggregation.py  auto_complete.py  client.py  document.py  query.py  querystring.py  reducers.py  result.py
test/: test-setup.sh  test.py  test_builder.py
test/docker/: Dockerfile  Makefile  redis-server.sh  test.sh
