[tool.poetry]
name = "redisearch"
version = "2.0.0"
description = "RedisSearch Python Client"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'

]
keywords = ["Redis Search Extension"]

[tool.poetry.dependencies]
python = ">=2.7,<=2.9.0 || >= 3.5.0"
redis = "^3.5.3"
six = "^1.16.0"
rmtest = {git = "https://github.com/RedisLabs/rmtest"}
    {version = "^1.1.0", python = "^3.6"},
    {version = "^2.0.0", python = "^3.6"},
]



[tool.poetry.urls]
url = "https://redisearch.io"
repository = "https://github.com/RedisSearch/redisearch-py"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
tox = "3.15.1"
tox-poetry = "0.3.0"
bandit = "1.6.0"
vulture = "1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
