[tool.poetry]
name = "redisearch"
version = "2.1.0"
description = "RedisSearch Python Client"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'

]
keywords = ["Redis Search Extension"]

[tool.poetry.dependencies]
python = "^3.6.0"
redis = "^3.5.3"
six = "^1.16.0"
rmtest = {git = "https://github.com/RedisLabs/rmtest"}
rejson = "^0.5.4"
hiredis = [
    {version = "^2.0.0", python = "^3.6"},
]



[tool.poetry.urls]
url = "https://redisearch.io"
repository = "https://github.com/RedisSearch/redisearch-py"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^4.0.0"
tox = "^3.22.0 || <= 4.0.0"
tox-poetry = "^0.4.0"
bandit = "1.6.0"
vulture = "^2.1"
coverage = "^6.1.1"
virtualenv = "20.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
